    \itemize{
      \item Calling \code{lm.wfit()} with no non-zero weights gave an
      array-overrun in the Fortran code and a not very sensible answer.
      It is now special-cased with a simpler answer (no \code{qr}
      component).

      \item On system where \code{mktime()} does not set \code{ERRNO}, the
      last second before the epoch could not be converted from \code{POSIXlt}
      to \code{POSIXct}. (Reported by Bill Dunlap).

      \item If \code{x} is a symbol, \code{is.vector(x, "name")} now returns
      \code{TRUE}, since \code{"name"} and \code{"symbol"} should be synonyms.
      (Reported by Hervé Pagès.)

      \item The parser now enforces C99 syntax for floating point
      hexadecimal constants (e.g. \code{0x1.1p0}), rather than returning
      unintended values for malformed constants. (\PR{15234})

      \item \code{is.unsorted(NA)} is false as documented (rather than
      \code{NA}).
    }
  }
}

\section{\Rlogo CHANGES IN R 3.0.1 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The macros used for the texinfo manuals have been changed to
      work better with the incompatible changes made in texinfo 5.x.

      \item The \code{example()} and \code{tools::Rd2ex()} functions now
      have parameters to allow them to ignore \verb{\dontrun} markup in
      examples.  (Suggested by Peter Solymos.)
      
      \item The included version of PCRE has been updated to 8.33.
      
      \item The included version of zlib has been updated to 1.2.8, a
      bug-fix release.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check --as-cran} checks the line widths in
      usage and examples sections of the package Rd files.

      \item \command{R CMD check} looks for command \command{gfile} if a
      suitable \command{file} is not found.  (Although \command{file} is
      not from GNU, OpenCSW on Solaris installs it as \command{gfile}.)
